<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".FormActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormActivity">
    <TextView
            android:text="@string/header"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:fontFamily="sans-serif-black"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.011"
            android:textSize="20sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_event"
            android:inputType="textCapSentences"
            android:maxLength="30"
            android:ems="10"
            android:id="@+id/name_EditText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="180dp"
            android:layout_marginTop="68dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/info_type"
            android:layout_width="214dp"
            android:layout_height="25dp"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name_EditText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            android:textSize="18sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016" app:layout_constraintVertical_bias="0.681"/>
    <RadioGroup
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.286"
            android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/type_information"
                android:layout_width="164dp"
                android:layout_height="wrap_content" android:id="@+id/information_radio" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/type_shopping"
                android:layout_width="164dp"
                android:layout_height="wrap_content" android:id="@+id/shopping_radio" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/type_travel"
                android:layout_width="164dp"
                android:layout_height="wrap_content" android:id="@+id/travel_radio" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/type_house"
                android:layout_width="164dp"
                android:layout_height="wrap_content" android:id="@+id/house_radio" android:layout_weight="1"/>
    </RadioGroup>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/information"
            android:id="@+id/icon" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/radioGroup"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintVertical_bias="0.291" android:contentDescription="@string/icon"/>
    <TextView
            android:text="@string/info_date"
            android:layout_width="160dp"
            android:layout_height="25dp"
            android:id="@+id/textView5" android:layout_marginBottom="344dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintVertical_bias="0.18"
            android:textSize="18sp"/>
    <TextView
            android:text=""
            android:layout_width="132dp"
            android:layout_height="29dp"
            android:id="@+id/dataPicker" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.008"
            app:fontFamily="sans-serif-black"
            android:textSize="20sp" android:gravity="center"
            tools:text="@tools:sample/date/ddmmyy"/>
    <TextView
            android:text="@string/info_time"
            android:layout_width="160dp"
            android:layout_height="25dp"
            android:id="@+id/textView6" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.012" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dataPicker" app:layout_constraintVertical_bias="0.016"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/text_timer"
            android:layout_width="134dp"
            android:layout_height="32dp"
            android:id="@+id/timerPicker" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.007"
            app:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:gravity="center"/>
    <TextView
            android:text="@string/info_description"
            android:layout_width="160dp"
            android:layout_height="25dp"
            android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="172dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/timerPicker"
            app:layout_constraintVertical_bias="0.033"/>
    <EditText
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:maxLength="50"
            android:id="@+id/describer" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.017" android:importantForAutofill="no"/>
    <Button
            android:text="@string/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/describer"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
